[gd_scene load_steps=3 format=3 uid="uid://dev6lv6mvl3a0"]

[ext_resource type="Script" path="res://GUI/menu.gd" id="1_cfbji"]

[sub_resource type="Theme" id="Theme_odkws"]

[node name="Control" type="Control"]
layout_mode = 3
anchor_right = 1.001
anchor_bottom = 1.0
offset_right = -0.1521
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = SubResource("Theme_odkws")
script = ExtResource("1_cfbji")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
auto_translate_mode = 2
layout_direction = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -305.0
offset_right = 200.0
offset_bottom = 305.0
grow_horizontal = 2
grow_vertical = 2
localize_numeral_system = false
alignment = 1

[node name="new_game_player" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Új játék - PvP"

[node name="new_game_bot" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Új játék - Bot
"

[node name="settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Beállítások"

[node name="quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Bezár
"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -68.5
offset_right = 68.5
offset_bottom = 49.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 35
text = "Főmenü"

[connection signal="pressed" from="VBoxContainer/new_game_player" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/new_game_player" to="." method="_on_new_game_player_pressed"]
[connection signal="pressed" from="VBoxContainer/new_game_bot" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/new_game_bot" to="." method="_on_new_game_bot_pressed"]
[connection signal="pressed" from="VBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
